--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,21 +11,31 @@ on:
 
 jobs:
   build:
-
+    name: Test
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x, 22.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
-    - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: yarn ci
-    - run: yarn run build --if-present
-    - run: yarn test
+      - uses: actions/checkout@v3
+
+      - name: Set Node.js 18.x
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20.18.0
+
+      - name: Run install
+        uses: borales/actions-yarn@v4
+        with:
+          cmd: install # will run `yarn install` command
+      - name: Build production bundle
+        uses: borales/actions-yarn@v4
+        with:
+          cmd: build # will run `yarn build:prod` command
+      - name: Test the app
+        uses: borales/actions-yarn@v4
+        with:
+          cmd: test # will run `yarn test` command
+
+      # - name: Run test in sub-folder
+      #   uses: borales/actions-yarn@v4
+      #   with:
+      #     cmd: test
+      #     dir: 'frontend' # will run `yarn test` in `frontend` sub folder
