--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Node.js CI
+name: Solid JS
 
 on:
   push:
@@ -11,12 +11,12 @@ on:
 
 jobs:
   build:
-    name: Test
+    name: Component Test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set Node.js 18.x
+      - name: Set Node.js 20.18.0
         uses: actions/setup-node@v3
         with:
           node-version: 20.18.0
