Chore: updated actions to run storybook build (#4)
- TODO: deploy storybook when built to a free provider (to research)
- Also updated gitignore for sotrybook-static directory when built locally

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,10 +29,14 @@ jobs:
         uses: borales/actions-yarn@v4
         with:
           cmd: build # will run `yarn build:prod` command
-      - name: Test the app
+      - name: Run tests
         uses: borales/actions-yarn@v4
         with:
           cmd: test # will run `yarn test` command
+      - name: Run Storybook Build
+        uses: borales/actions-yarn@v4
+        with:
+          cmd: storybook:build # will run `yarn test` command
 
       # - name: Run test in sub-folder
       #   uses: borales/actions-yarn@v4
