--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "vitest": "^3.0.6"
   },
   "dependencies": {
+    "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.15.3",
     "@types/node": "^22.13.4",
     "modern-normalize": "^3.0.1",
