Chore: added some changes for the storybook instance (#11)
- TODO: still requires some work
- Non-router components should work fine but given that the <A> component needs a "router wrapper" to work... And I may want to use this component in quite a few places... Might need to Mock it or only use it as a child? *This is what makes our jobs fun...*

--- a/package.json
+++ b/package.json
@@ -21,19 +21,19 @@
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.4",
     "@solidjs/testing-library": "^0.8.10",
-    "@storybook/addon-essentials": "^8.5.7",
-    "@storybook/addon-interactions": "^8.5.7",
-    "@storybook/blocks": "^8.5.7",
-    "@storybook/test": "^8.5.7",
+    "@storybook/addon-essentials": "^8.6.0",
+    "@storybook/addon-interactions": "^8.6.0",
+    "@storybook/addon-mdx-gfm": "^8.6.0",
+    "@storybook/blocks": "^8.6.0",
+    "@storybook/html-vite": "^8.6.0",
+    "@storybook/test": "^8.6.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/user-event": "^14.6.1",
     "husky": "^9.1.7",
     "jsdom": "^26.0.0",
     "solid-devtools": "^0.29.3",
-    "storybook": "^8.5.7",
-    "storybook-solidjs": "^1.0.0-beta.6",
-    "storybook-solidjs-vite": "^1.0.0-beta.6",
+    "storybook": "^8.6.0",
     "typescript": "^5.7.3",
     "vite": "^6.1.0",
     "vite-plugin-solid": "^2.11.1",
@@ -42,6 +42,7 @@
   "dependencies": {
     "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.15.3",
+    "@storybook/html": "^8.6.0",
     "@types/node": "^22.13.4",
     "modern-normalize": "^3.0.1",
     "solid-js": "^1.9.4",
