--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "kurtisrogers.com",
   "author": {
-    "name": "Kurtis Rogers"
+    "name": "Kurtis Rogers",
+    "email": "kurtmcmurt@gmail.com"
   },
   "version": "0.0.1",
   "description": "Personal project to build a web app with Solid JS",
