--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.4",
     "@solidjs/testing-library": "^0.8.10",
+    "@storybook/addon-a11y": "^8.6.0",
     "@storybook/addon-essentials": "^8.6.0",
     "@storybook/addon-interactions": "^8.6.0",
     "@storybook/addon-mdx-gfm": "^8.6.0",
