--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "storybook": "storybook dev -p 6006",
     "storybook:build": "storybook build",
     "test": "vitest",
+    "test:coverage": "vitest --coverage",
     "test:update": "vitest -u",
+    "test:verbose": "vitest --reporter=verbose",
+    "test:dot": "vitest --reporter=dot",
     "postinstall": "husky",
     "lint": "npx eslint"
   },
@@ -33,6 +36,7 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/user-event": "^14.6.1",
+    "@vitest/coverage-v8": "3.0.6",
     "eslint": "^9.21.0",
     "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-prettier": "^5.2.3",
