--- a/package.json
+++ b/package.json
@@ -24,15 +24,11 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.4",
+    "@chromatic-com/storybook": "^4.1.1",
     "@solidjs/testing-library": "^0.8.10",
-    "@storybook/addon-a11y": "^8.6.0",
-    "@storybook/addon-essentials": "^8.6.0",
-    "@storybook/addon-interactions": "^8.6.0",
-    "@storybook/addon-mdx-gfm": "^8.6.0",
-    "@storybook/blocks": "^8.6.0",
-    "@storybook/html-vite": "^8.6.0",
-    "@storybook/test": "^8.6.0",
+    "@storybook/addon-a11y": "^9.1.13",
+    "@storybook/addon-docs": "^9.1.13",
+    "@storybook/html-vite": "^9.1.13",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/user-event": "^14.6.1",
@@ -40,22 +36,22 @@
     "eslint": "^9.21.0",
     "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-storybook": "9.1.13",
     "globals": "^16.0.0",
+    "happy-dom": "^20.0.8",
     "husky": "^9.1.7",
-    "jsdom": "^26.0.0",
     "prettier": "3.5.2",
     "solid-devtools": "^0.29.3",
-    "storybook": "^8.6.0",
+    "storybook": "^9.1.13",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.25.0",
-    "vite": "^6.1.0",
+    "vite": "^6.4.1",
     "vite-plugin-solid": "^2.11.1",
     "vitest": "^3.0.6"
   },
   "dependencies": {
     "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.15.3",
-    "@storybook/html": "^8.6.0",
     "@types/node": "^22.13.4",
     "modern-normalize": "^3.0.1",
     "solid-js": "^1.9.4",
