chore/general-improvements (#76)
* chore/general-improvements
- made a change to the workflows, removed unnecessary processes
- updated packages
- hover states needed doing - gone for a quick, lazy option for now
- added github link to the footer
- updated tests
- button component no longer adding unnecessary attributes to links or buttons

On branch chore/general-improvements
Changes to be committed:
modified:   .github/workflows/node.js.yml
modified:   .yarn/install-state.gz
modified:   package.json
modified:   public/css/branding.css
modified:   public/css/components.css
modified:   public/css/variables.css
modified:   src/components/atoms/Button/Button.test.jsx
modified:   src/components/atoms/Button/index.tsx
modified:   src/components/molecules/Socials/index.tsx
modified:   src/components/molecules/Socials/style.css
modified:   src/components/organisms/Banner/__snapshots__/Banner.test.jsx.snap
modified:   src/components/organisms/Footer/Footer.test.jsx
modified:   src/components/organisms/Footer/index.tsx
modified:   src/components/organisms/Footer/style.css
modified:   src/components/organisms/Header/style.css
modified:   src/data/icons/index.ts
modified:   src/data/pages/about.json
modified:   src/data/pages/blog.json
modified:   src/data/pages/contact.json
modified:   src/data/pages/home.json
modified:   src/data/pages/notfound.json
modified:   src/helpers/layouts.tsx
modified:   src/helpers/renderList.tsx

* Baking th css further
- removed transition and repeated styles

---------

Co-authored-by: Kurtis Rogers <kurtmcmurt@gmqil.com>

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,9 +5,9 @@ name: Solid JS
 
 on:
   push:
-    branches: [ "develop" ]
+    branches: [ "develop", "master" ]
   pull_request:
-    branches: [ "develop" ]
+    branches: [ "develop", "master" ]
 
 jobs:
   build:
@@ -25,18 +25,18 @@ jobs:
         uses: borales/actions-yarn@v4
         with:
           cmd: install # will run `yarn install` command
-      - name: Build production bundle
-        uses: borales/actions-yarn@v4
-        with:
-          cmd: build # will run `yarn build:prod` command
+      # - name: Build production bundle
+      #   uses: borales/actions-yarn@v4
+      #   with:
+      #     cmd: build # will run `yarn build:prod` command
       - name: Run tests
         uses: borales/actions-yarn@v4
         with:
           cmd: test # will run `yarn test` command
-      - name: Run Storybook Build
-        uses: borales/actions-yarn@v4
-        with:
-          cmd: storybook:build # will run `yarn test` command
+      # - name: Run Storybook Build
+      #   uses: borales/actions-yarn@v4
+      #   with:
+      #     cmd: storybook:build # will run `yarn test` command
 
       # - name: Run test in sub-folder
       #   uses: borales/actions-yarn@v4
